testing crossbrowser fixes 5

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -593,7 +593,7 @@ main {
 
   }
 
-  /* --- 3D Background Container (Lines) --- */
+  /* --- 3D Background Container Lines --- */
   #world-background-container {
       position: absolute;
       top: 0; left: 0;
